// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`2-level deep nested element match snapshot 1`] = `
<body>
  <main>
    <header>
      <h1>
        hello
      </h1>
      <h2>
        world
      </h2>
    </header>
  </main>
</body>
`;

exports[`Basic single element match snapshot 1`] = `
<body>
  <h1>
    hello
  </h1>
</body>
`;
